cmake_minimum_required(VERSION 3.17)
project(Exercise)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex1 Exercise1.cpp)
add_executable(ex2 Exercise2.cpp)
add_executable(ex3 Exercise3.cpp)
add_executable(ex4 Exercise4.cpp)
add_executable(ex5 Exercise5.cpp)
add_executable(ex6 Exercise6.cpp)
add_executable(ex7 Exercise7.cpp)
add_executable(ex8 Exercise8.cpp candybar.cpp)
add_executable(ex9 Exercise9.cpp golf.cpp golf.h sale.cpp sale.h)
add_executable(ex10 Exercise10.cpp)
add_executable(ex11 Exercise11.cpp Complex.cpp Complex.h Number.cpp Number.h)
add_executable(ex12 Exercise12.cpp Stock.cpp Stock.h Stack.cpp Stack.h)
add_executable(ex13 Exercise13.cpp CStereoShape.cpp CStereoShape.h)
add_executable(ex14 Exercise14.cpp matrix.h)
add_executable(ex15 Exercise15.cpp tv.cpp tv.h)
add_executable(maxTemplate maxTemplate.cpp)